infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: checkin
  labels:
    app.kubernetes.io/name: checkin-app
    app.kubernetes.io/managed-by: kubectl
